--- a/aio.ipynb
+++ b/aio.ipynb
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,8 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-29 00:59:04,143\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
+      "2024-04-29 01:04:20,745 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/4\u001b[0m\n",
+      "2024-04-29 01:04:20,747\u001b[32m <INFO> WatchDog: success/total: 12/13\u001b[0m\n",
       "best_sedds_of_stage1:  42 38 54 1 62\n",
       "{42: {'val': {'accuracy': 90.73, 'F1-score': 90.78, 'loss': 1.11},\n",
       "      'test': {'accuracy': 88.71, 'F1-score': 89.28, 'loss': 1.28}},\n",
@@ -2905,7 +2906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -2913,7 +2914,9 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-28 20:37:40,302\u001b[32m <INFO> WatchDog: success/total: 3/3\u001b[0m\n",
+      "2024-04-29 01:10:49,572 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/4e-05/2\u001b[0m\n",
+      "2024-04-29 01:10:49,573 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/4e-05/5\u001b[0m\n",
+      "2024-04-29 01:10:49,574\u001b[32m <INFO> WatchDog: success/total: 3/5\u001b[0m\n",
       "best_sedds_of_stage1:  44 78 52\n",
       "{44: {'val': {'accuracy': 91.44, 'F1-score': 88.6, 'loss': 1.02}},\n",
       " 78: {'val': {'accuracy': 91.33, 'F1-score': 88.51, 'loss': 1.05}},\n",
