--- a/aio.ipynb
+++ b/aio.ipynb
@@ -49,16 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-04-26 11:15:41,202] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "---------baseline---------\n",
-      "2024-04-26 11:15:48,007\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-04-29 20:01:25,603\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{97: {'val': {'accuracy': 86.18, 'F1-score': 85.99, 'loss': 0.39},\n",
       "      'test': {'accuracy': 85.32, 'F1-score': 85.26, 'loss': 0.42}},\n",
       " 53: {'val': {'accuracy': 85.36, 'F1-score': 84.59, 'loss': 0.54},\n",
@@ -72,7 +71,7 @@
       "{'val': {'accuracy': 85.72, 'F1-score': 85.23, 'loss': 0.45},\n",
       " 'test': {'accuracy': 85.08, 'F1-score': 84.7, 'loss': 0.46}}\n",
       "---------TWR---------\n",
-      "2024-04-26 11:15:48,011\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-29 20:01:25,611\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  97 53 10 43 46\n",
       "{97: {'val': {'accuracy': 86.07, 'F1-score': 85.67, 'loss': 2.16},\n",
       "      'test': {'accuracy': 86.37, 'F1-score': 86.08, 'loss': 2.16}},\n",
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -194,29 +193,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "---------baseline---------\n",
+      "2024-04-29 20:03:08,470\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
+      "{118: {'val': {'accuracy': 85.72, 'F1-score': 85.24, 'loss': 0.5},\n",
+      "       'test': {'accuracy': 85.65, 'F1-score': 85.34, 'loss': 0.5}},\n",
+      " 149: {'val': {'accuracy': 85.63, 'F1-score': 85.21, 'loss': 0.41},\n",
+      "       'test': {'accuracy': 85.44, 'F1-score': 85.17, 'loss': 0.42}},\n",
+      " 43: {'val': {'accuracy': 85.55, 'F1-score': 85.52, 'loss': 0.42},\n",
+      "      'test': {'accuracy': 85.08, 'F1-score': 85.29, 'loss': 0.43}},\n",
+      " 107: {'val': {'accuracy': 85.41, 'F1-score': 84.78, 'loss': 0.53},\n",
+      "       'test': {'accuracy': 84.98, 'F1-score': 84.54, 'loss': 0.52}},\n",
+      " 12: {'val': {'accuracy': 85.87, 'F1-score': 85.3, 'loss': 0.51},\n",
+      "      'test': {'accuracy': 84.63, 'F1-score': 84.14, 'loss': 0.53}}}\n",
+      "{'val': {'accuracy': 85.64, 'F1-score': 85.21, 'loss': 0.47},\n",
+      " 'test': {'accuracy': 85.16, 'F1-score': 84.9, 'loss': 0.48}}\n",
       "---------TWR---------\n",
-      "2024-04-29 01:18:43,828 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/100\u001b[0m\n",
-      "2024-04-29 01:18:43,832\u001b[32m <INFO> WatchDog: success/total: 10/11\u001b[0m\n",
-      "best_sedds_of_stage1:  43 149 12 97 25\n",
+      "2024-04-29 20:03:08,475\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "best_sedds_of_stage1:  43 118 149 107 12\n",
       "{43: {'val': {'accuracy': 86.04, 'F1-score': 85.96, 'loss': 1.7},\n",
       "      'test': {'accuracy': 86.16, 'F1-score': 86.16, 'loss': 1.72}},\n",
+      " 118: {'val': {'accuracy': 85.94, 'F1-score': 85.33, 'loss': 2.19},\n",
+      "       'test': {'accuracy': 85.88, 'F1-score': 85.43, 'loss': 2.2}},\n",
       " 149: {'val': {'accuracy': 86.06, 'F1-score': 85.72, 'loss': 1.77},\n",
       "       'test': {'accuracy': 85.75, 'F1-score': 85.48, 'loss': 1.84}},\n",
+      " 107: {'val': {'accuracy': 85.94, 'F1-score': 85.82, 'loss': 1.67},\n",
+      "       'test': {'accuracy': 85.74, 'F1-score': 85.75, 'loss': 1.67}},\n",
       " 12: {'val': {'accuracy': 86.56, 'F1-score': 86.38, 'loss': 1.74},\n",
-      "      'test': {'accuracy': 85.74, 'F1-score': 85.67, 'loss': 1.84}},\n",
-      " 97: {'val': {'accuracy': 86.44, 'F1-score': 86.04, 'loss': 2.0},\n",
-      "      'test': {'accuracy': 85.71, 'F1-score': 85.44, 'loss': 2.1}},\n",
-      " 25: {'val': {'accuracy': 86.17, 'F1-score': 85.8, 'loss': 1.72},\n",
-      "      'test': {'accuracy': 85.57, 'F1-score': 85.35, 'loss': 1.78}}}\n",
-      "{'val': {'accuracy': 86.25, 'F1-score': 85.98, 'loss': 1.79},\n",
-      " 'test': {'accuracy': 85.79, 'F1-score': 85.62, 'loss': 1.86}}\n"
+      "      'test': {'accuracy': 85.74, 'F1-score': 85.67, 'loss': 1.84}}}\n",
+      "{'val': {'accuracy': 86.11, 'F1-score': 85.84, 'loss': 1.81},\n",
+      " 'test': {'accuracy': 85.85, 'F1-score': 85.7, 'loss': 1.85}}\n"
      ]
     }
    ],
@@ -230,17 +242,17 @@
     "top_k = 5\n",
     "\n",
     "\n",
-    "# print(\"---------baseline---------\")\n",
-    "# seeds_dir = Path(\"outputs/BQ/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/2e-05\")\n",
-    "# # for seed_dir in seeds_dir.iterdir():\n",
-    "# #     if int(seed_dir.name) not in metric_dicts.keys():\n",
-    "# #         shutil.rmtree(seed_dir)\n",
-    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
-    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "# # seeds = \"97 53 10 43 46\"\n",
-    "# # metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
-    "# pp(metric_dict_topk)\n",
-    "# pp(mean)\n",
+    "print(\"---------baseline---------\")\n",
+    "seeds_dir = Path(\"outputs/BQ/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/2e-05\")\n",
+    "# for seed_dir in seeds_dir.iterdir():\n",
+    "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
+    "#         shutil.rmtree(seed_dir)\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# seeds = \"97 53 10 43 46\"\n",
+    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)\n",
     "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
@@ -260,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +281,7 @@
        "'100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,9 +292,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR-H/P---------\n",
+      "2024-04-29 20:05:07,423 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=43/1/16/2e-05/43\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">20</span>                                                                                   <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">17 │   </span>seeds_not_del = []                                                                      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">18 │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">for</span> metric <span style=\"color: #ff00ff; text-decoration-color: #ff00ff\">in</span> [<span style=\"color: #808000; text-decoration-color: #808000\">\"acc_pipline\"</span>, <span style=\"color: #808000; text-decoration-color: #808000\">\"accuracy\"</span>]:                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">19 │   │   </span>metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, <span style=\"color: #0000ff; text-decoration-color: #0000ff\">1</span>, metric_for_compare=metric    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>20 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   │   </span>seeds_not_del.append(<span style=\"color: #00ffff; text-decoration-color: #00ffff\">list</span>(metric_dict_topk1.keys())[<span style=\"color: #0000ff; text-decoration-color: #0000ff\">0</span>])                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">21 │   # print(seeds_not_del)</span>                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">22 │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">if</span> _mean:                                                                               <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">23 │   │   </span>metric_dicts[seed_of_stage1] = _mean                                                <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">IndexError: </span>list index out of range\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
+       "\u001b[31m│\u001b[0m in \u001b[92m<module>\u001b[0m:\u001b[94m20\u001b[0m                                                                                   \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m17 \u001b[0m\u001b[2m│   \u001b[0mseeds_not_del = []                                                                      \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m18 \u001b[0m\u001b[2m│   \u001b[0m\u001b[94mfor\u001b[0m metric \u001b[95min\u001b[0m [\u001b[33m\"\u001b[0m\u001b[33macc_pipline\u001b[0m\u001b[33m\"\u001b[0m, \u001b[33m\"\u001b[0m\u001b[33maccuracy\u001b[0m\u001b[33m\"\u001b[0m]:                                              \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m19 \u001b[0m\u001b[2m│   │   \u001b[0mmetric_dict_topk1, _ = WatchDog.topk(_metric_dicts, \u001b[94m1\u001b[0m, metric_for_compare=metric    \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m20 \u001b[2m│   │   \u001b[0mseeds_not_del.append(\u001b[96mlist\u001b[0m(metric_dict_topk1.keys())[\u001b[94m0\u001b[0m])                             \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m21 \u001b[0m\u001b[2m│   \u001b[0m\u001b[2m# print(seeds_not_del)\u001b[0m                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m22 \u001b[0m\u001b[2m│   \u001b[0m\u001b[94mif\u001b[0m _mean:                                                                               \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m23 \u001b[0m\u001b[2m│   │   \u001b[0mmetric_dicts[seed_of_stage1] = _mean                                                \u001b[31m│\u001b[0m\n",
+       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+       "\u001b[1;91mIndexError: \u001b[0mlist index out of range\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print(\"---------TWR-H/P---------\")\n",
     "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
@@ -296,7 +352,7 @@
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
-    "    seeds_dir = f\"outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_only_pos_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
+    "    seeds_dir = f\"outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_only_pos_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-05\"\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
     "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
@@ -3291,7 +3347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3299,7 +3355,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-27 22:11:37,763\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
+      "2024-04-29 14:44:08,966\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
       "{44: {'val': {'accuracy': 88.24, 'F1-score': 91.55, 'loss': 0.28},\n",
       "      'test': {'accuracy': 87.65, 'F1-score': 90.89, 'loss': 0.33}},\n",
       " 13: {'val': {'accuracy': 90.93, 'F1-score': 93.31, 'loss': 0.24},\n",
@@ -3313,7 +3369,7 @@
       "{'val': {'accuracy': 89.02, 'F1-score': 92.07, 'loss': 0.27},\n",
       " 'test': {'accuracy': 87.5, 'F1-score': 90.72, 'loss': 0.31}}\n",
       "---------TWR---------\n",
-      "2024-04-27 22:11:37,767\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-29 14:44:08,971\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  9 37 59 2 44\n",
       "{9: {'val': {'accuracy': 88.24, 'F1-score': 91.58, 'loss': 1.51},\n",
       "     'test': {'accuracy': 88.41, 'F1-score': 91.47, 'loss': 1.54}},\n",
