--- a/aio.ipynb
+++ b/aio.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-29 20:03:08,470\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
+      "2024-04-29 22:59:50,122\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
       "{118: {'val': {'accuracy': 85.72, 'F1-score': 85.24, 'loss': 0.5},\n",
       "       'test': {'accuracy': 85.65, 'F1-score': 85.34, 'loss': 0.5}},\n",
       " 149: {'val': {'accuracy': 85.63, 'F1-score': 85.21, 'loss': 0.41},\n",
@@ -215,7 +215,7 @@
       "{'val': {'accuracy': 85.64, 'F1-score': 85.21, 'loss': 0.47},\n",
       " 'test': {'accuracy': 85.16, 'F1-score': 84.9, 'loss': 0.48}}\n",
       "---------TWR---------\n",
-      "2024-04-29 20:03:08,475\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-29 22:59:50,129\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  43 118 149 107 12\n",
       "{43: {'val': {'accuracy': 86.04, 'F1-score': 85.96, 'loss': 1.7},\n",
       "      'test': {'accuracy': 86.16, 'F1-score': 86.16, 'loss': 1.72}},\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "'100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,24 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H/P---------\n",
-      "2024-04-29 20:05:07,423 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=43/1/16/2e-05/43\u001b[0m\n"
+      "2024-04-29 22:59:51,947 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=43/1/16/2e-05/15\u001b[0m\n",
+      "2024-04-29 22:59:52,862 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/43\u001b[0m\n",
+      "2024-04-29 22:59:52,866 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/10\u001b[0m\n",
+      "2024-04-29 22:59:52,867 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/118\u001b[0m\n",
+      "2024-04-29 22:59:52,868 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/5\u001b[0m\n",
+      "2024-04-29 22:59:52,869 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/14\u001b[0m\n",
+      "2024-04-29 22:59:52,870 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/7\u001b[0m\n",
+      "2024-04-29 22:59:52,871 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/107\u001b[0m\n",
+      "2024-04-29 22:59:52,872 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/2\u001b[0m\n",
+      "2024-04-29 22:59:52,873 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/9\u001b[0m\n",
+      "2024-04-29 22:59:52,874 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/6\u001b[0m\n",
+      "2024-04-29 22:59:52,875 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/12\u001b[0m\n",
+      "2024-04-29 22:59:52,875 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/3\u001b[0m\n",
+      "2024-04-29 22:59:52,876 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/1\u001b[0m\n",
+      "2024-04-29 22:59:52,877 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/4\u001b[0m\n",
+      "2024-04-29 22:59:52,878 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/13\u001b[0m\n",
+      "2024-04-29 22:59:52,879 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/8\u001b[0m\n",
+      "2024-04-29 22:59:52,880 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/149\u001b[0m\n"
      ]
     },
     {
