--- a/aio.ipynb
+++ b/aio.ipynb
@@ -193,15 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[2024-04-30 23:25:34,586] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "---------baseline---------\n",
-      "2024-04-29 22:59:50,122\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
+      "2024-04-30 23:25:40,973\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
       "{118: {'val': {'accuracy': 85.72, 'F1-score': 85.24, 'loss': 0.5},\n",
       "       'test': {'accuracy': 85.65, 'F1-score': 85.34, 'loss': 0.5}},\n",
       " 149: {'val': {'accuracy': 85.63, 'F1-score': 85.21, 'loss': 0.41},\n",
@@ -215,7 +216,7 @@
       "{'val': {'accuracy': 85.64, 'F1-score': 85.21, 'loss': 0.47},\n",
       " 'test': {'accuracy': 85.16, 'F1-score': 84.9, 'loss': 0.48}}\n",
       "---------TWR---------\n",
-      "2024-04-29 22:59:50,129\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-30 23:25:40,976\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  43 118 149 107 12\n",
       "{43: {'val': {'accuracy': 86.04, 'F1-score': 85.96, 'loss': 1.7},\n",
       "      'test': {'accuracy': 86.16, 'F1-score': 86.16, 'loss': 1.72}},\n",
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +282,7 @@
        "'100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -300,24 +301,7 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H/P---------\n",
-      "2024-04-29 22:59:51,947 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=43/1/16/2e-05/15\u001b[0m\n",
-      "2024-04-29 22:59:52,862 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/43\u001b[0m\n",
-      "2024-04-29 22:59:52,866 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/10\u001b[0m\n",
-      "2024-04-29 22:59:52,867 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/118\u001b[0m\n",
-      "2024-04-29 22:59:52,868 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/5\u001b[0m\n",
-      "2024-04-29 22:59:52,869 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/14\u001b[0m\n",
-      "2024-04-29 22:59:52,870 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/7\u001b[0m\n",
-      "2024-04-29 22:59:52,871 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/107\u001b[0m\n",
-      "2024-04-29 22:59:52,872 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/2\u001b[0m\n",
-      "2024-04-29 22:59:52,873 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/9\u001b[0m\n",
-      "2024-04-29 22:59:52,874 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/6\u001b[0m\n",
-      "2024-04-29 22:59:52,875 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/12\u001b[0m\n",
-      "2024-04-29 22:59:52,875 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/3\u001b[0m\n",
-      "2024-04-29 22:59:52,876 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/1\u001b[0m\n",
-      "2024-04-29 22:59:52,877 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/4\u001b[0m\n",
-      "2024-04-29 22:59:52,878 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/13\u001b[0m\n",
-      "2024-04-29 22:59:52,879 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/8\u001b[0m\n",
-      "2024-04-29 22:59:52,880 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=118/1/16/2e-05/149\u001b[0m\n"
+      "2024-04-30 23:30:17,977 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.4_only_pos_record_pipline/seed_of_stage1=43/1/16/2e-05/43\u001b[0m\n"
      ]
     },
     {
@@ -363,7 +347,7 @@
     "metric_for_compare = \"accuracy\"\n",
     "\n",
     "times = \"0.1\"\n",
-    "ratio = 0.2\n",
+    "ratio = 0.4\n",
     "# times=\"None\"\n",
     "\n",
     "metric_dicts = dict()\n",
