--- a/aio.ipynb
+++ b/aio.ipynb
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-29 22:55:47,746\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
+      "2024-04-30 23:38:17,435\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
       "{29: {'val': {'accuracy': 90.33, 'F1-score': 90.3, 'loss': 0.26},\n",
       "      'test': {'accuracy': 88.4, 'F1-score': 88.99, 'loss': 0.28}},\n",
       " 42: {'val': {'accuracy': 89.29, 'F1-score': 89.16, 'loss': 0.29},\n",
@@ -1156,7 +1156,7 @@
       "{'val': {'accuracy': 89.7, 'F1-score': 89.78, 'loss': 0.3},\n",
       " 'test': {'accuracy': 87.41, 'F1-score': 88.26, 'loss': 0.33}}\n",
       "---------TWR---------\n",
-      "2024-04-29 22:55:47,749\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-30 23:38:17,465\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  29 42 38 54 1\n",
       "{29: {'val': {'accuracy': 90.91, 'F1-score': 90.86, 'loss': 1.12},\n",
       "      'test': {'accuracy': 88.9, 'F1-score': 89.34, 'loss': 1.19}},\n",
@@ -3014,23 +3014,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[2024-04-30 23:37:54,199] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "---------TWR---------\n",
-      "2024-04-29 22:58:36,267 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/10\u001b[0m\n",
-      "2024-04-29 22:58:36,268\u001b[32m <INFO> WatchDog: success/total: 10/11\u001b[0m\n",
-      "best_sedds_of_stage1:  78 2 8 22 5\n",
-      "{78: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}},\n",
+      "2024-04-30 23:37:59,823 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/29\u001b[0m\n",
+      "2024-04-30 23:37:59,896\u001b[32m <INFO> WatchDog: success/total: 23/24\u001b[0m\n",
+      "best_sedds_of_stage1:  18 78 23 2 8\n",
+      "{18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
+      " 78: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}},\n",
+      " 23: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}},\n",
       " 2: {'val': {'accuracy': 91.42, 'F1-score': 88.62, 'loss': 1.02}},\n",
-      " 8: {'val': {'accuracy': 91.4, 'F1-score': 88.59, 'loss': 1.03}},\n",
-      " 22: {'val': {'accuracy': 91.39, 'F1-score': 88.63, 'loss': 1.03}},\n",
-      " 5: {'val': {'accuracy': 91.37, 'F1-score': 88.59, 'loss': 1.03}}}\n",
-      "{'val': {'accuracy': 91.4, 'F1-score': 88.62, 'loss': 1.03}}\n"
+      " 8: {'val': {'accuracy': 91.4, 'F1-score': 88.59, 'loss': 1.03}}}\n",
+      "{'val': {'accuracy': 91.43, 'F1-score': 88.63, 'loss': 1.03}}\n"
      ]
     }
    ],
