--- a/aio.ipynb
+++ b/aio.ipynb
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-30 23:38:17,435\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
+      "2024-05-02 13:22:18,267\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
       "{29: {'val': {'accuracy': 90.33, 'F1-score': 90.3, 'loss': 0.26},\n",
       "      'test': {'accuracy': 88.4, 'F1-score': 88.99, 'loss': 0.28}},\n",
       " 42: {'val': {'accuracy': 89.29, 'F1-score': 89.16, 'loss': 0.29},\n",
@@ -1140,7 +1140,7 @@
       "{'val': {'accuracy': 89.7, 'F1-score': 89.78, 'loss': 0.3},\n",
       " 'test': {'accuracy': 87.41, 'F1-score': 88.26, 'loss': 0.33}}\n",
       "---------TWR---------\n",
-      "2024-04-30 23:38:17,465\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-02 13:22:18,270\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  29 42 38 54 1\n",
       "{29: {'val': {'accuracy': 90.91, 'F1-score': 90.86, 'loss': 1.12},\n",
       "      'test': {'accuracy': 88.9, 'F1-score': 89.34, 'loss': 1.19}},\n",
@@ -1198,17 +1198,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR-H/P---------\n",
+      "29 34 11 54 26\n",
+      "{29: {'val': {'acc_pipline': 90.7, 'f1_pipline': 90.42, 'accuracy': 90.22, 'F1-score': 89.74, 'loss': 1.2},\n",
+      "      'test': {'acc_pipline': 89.74, 'f1_pipline': 89.86, 'accuracy': 89.9, 'F1-score': 89.79, 'loss': 1.12}},\n",
+      " 38: {'val': {'acc_pipline': 90.9, 'f1_pipline': 90.76, 'accuracy': 90.52, 'F1-score': 90.14, 'loss': 1.16},\n",
+      "      'test': {'acc_pipline': 89.22, 'f1_pipline': 89.54, 'accuracy': 89.87, 'F1-score': 89.88, 'loss': 1.14}},\n",
+      " 42: {'val': {'acc_pipline': 90.93, 'f1_pipline': 90.72, 'accuracy': 90.24, 'F1-score': 89.71, 'loss': 1.17},\n",
+      "      'test': {'acc_pipline': 89.41, 'f1_pipline': 89.62, 'accuracy': 89.74, 'F1-score': 89.56, 'loss': 1.12}},\n",
+      " 54: {'val': {'acc_pipline': 90.49, 'f1_pipline': 90.34, 'accuracy': 90.08, 'F1-score': 89.68, 'loss': 1.31},\n",
+      "      'test': {'acc_pipline': 89.14, 'f1_pipline': 89.45, 'accuracy': 89.69, 'F1-score': 89.68, 'loss': 1.21}},\n",
+      " 1: {'val': {'acc_pipline': 90.85, 'f1_pipline': 90.75, 'accuracy': 90.3, 'F1-score': 89.86, 'loss': 1.12},\n",
+      "     'test': {'acc_pipline': 88.8, 'f1_pipline': 89.11, 'accuracy': 89.5, 'F1-score': 89.36, 'loss': 1.13}}}\n",
+      "{'val': {'acc_pipline': 90.77, 'f1_pipline': 90.6, 'accuracy': 90.27, 'F1-score': 89.83, 'loss': 1.19},\n",
+      " 'test': {'acc_pipline': 89.26, 'f1_pipline': 89.52, 'accuracy': 89.74, 'F1-score': 89.65, 'loss': 1.14}}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"---------TWR-H/P---------\")\n",
     "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
     "metric_for_compare = \"acc_pipline\"\n",
     "metric_for_compare = \"accuracy\"\n",
     "\n",
-    "times = \"0.1\"\n",
-    "ratio = 1\n",
+    "ratio = 0.8\n",
     "# times=\"None\"\n",
     "\n",
     "metric_dicts = dict()\n",
@@ -1222,7 +1242,8 @@
     "    seeds_not_del = []\n",
     "    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
     "        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
-    "        seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
+    "        if _:\n",
+    "            seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
     "    # print(seeds_not_del)\n",
     "    if _mean:\n",
     "        metric_dicts[seed_of_stage1] = _mean\n",
@@ -1438,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2998,24 +3019,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-04-30 23:37:54,199] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "---------TWR---------\n",
-      "2024-04-30 23:37:59,823 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/29\u001b[0m\n",
-      "2024-04-30 23:37:59,896\u001b[32m <INFO> WatchDog: success/total: 23/24\u001b[0m\n",
-      "best_sedds_of_stage1:  18 78 23 2 8\n",
-      "{18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
+      "2024-05-02 13:27:18,190\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
+      "best_sedds_of_stage1:  33 18 78 31 23\n",
+      "{33: {'val': {'accuracy': 91.45, 'F1-score': 88.69, 'loss': 1.02}},\n",
+      " 18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
       " 78: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}},\n",
-      " 23: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}},\n",
-      " 2: {'val': {'accuracy': 91.42, 'F1-score': 88.62, 'loss': 1.02}},\n",
-      " 8: {'val': {'accuracy': 91.4, 'F1-score': 88.59, 'loss': 1.03}}}\n",
-      "{'val': {'accuracy': 91.43, 'F1-score': 88.63, 'loss': 1.03}}\n"
+      " 31: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.01}},\n",
+      " 23: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}}}\n",
+      "{'val': {'accuracy': 91.44, 'F1-score': 88.66, 'loss': 1.03}}\n"
      ]
     }
    ],
